@@ -74,7 +74,7 @@ specifier|abstract
 class|class
 name|BaseEditorialTransformer
 extends|extends
-name|TransformerWithContext
+name|DocTransformer
 block|{
 DECL|field|name
 specifier|final
