@@ -104,6 +104,56 @@ specifier|public
 name|SolrQueryRequest
 name|req
 decl_stmt|;
+DECL|method|getQuery
+specifier|public
+name|Query
+name|getQuery
+parameter_list|()
+block|{
+return|return
+name|query
+return|;
+block|}
+DECL|method|wantsScores
+specifier|public
+name|boolean
+name|wantsScores
+parameter_list|()
+block|{
+return|return
+name|wantsScores
+return|;
+block|}
+DECL|method|getDocIterator
+specifier|public
+name|DocIterator
+name|getDocIterator
+parameter_list|()
+block|{
+return|return
+name|iterator
+return|;
+block|}
+DECL|method|getSearcher
+specifier|public
+name|SolrIndexSearcher
+name|getSearcher
+parameter_list|()
+block|{
+return|return
+name|searcher
+return|;
+block|}
+DECL|method|getRequest
+specifier|public
+name|SolrQueryRequest
+name|getRequest
+parameter_list|()
+block|{
+return|return
+name|req
+return|;
+block|}
 block|}
 end_class
 end_unit
