@@ -20,6 +20,8 @@ begin_comment
 comment|/**  *  * @since solr 4.0  */
 end_comment
 begin_class
+annotation|@
+name|Deprecated
 DECL|class|TransformerWithContext
 specifier|public
 specifier|abstract
@@ -28,13 +30,6 @@ name|TransformerWithContext
 extends|extends
 name|DocTransformer
 block|{
-DECL|field|context
-specifier|protected
-name|TransformContext
-name|context
-init|=
-literal|null
-decl_stmt|;
 annotation|@
 name|Override
 DECL|method|setContext
